tests/specs/ecosystem/ooneex/model/1_0_0.test
ooneex/model/1.0.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2724 [ERROR]: '"https://jsr.io/@ooneex/validation/1.0.4/index.ts"' has no exported member named 'AssertBool'. Did you mean 'AssertBoolean'?
import { AssertBool } from "jsr:@ooneex/validation@^1.0.0";
         ~~~~~~~~~~
    at file://<tmpdir>/src/fields/BooleanField.ts:1:10

